<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nightfall-of-the-Final-Conquer</string>

    <string name="points_skills">10</string>
    <string name="hp_skills"> 500</string>
    <string name="mp_skills"> 500</string>
    <string name="atk_skills"> 50</string>
    <string name="def_skills"> 50</string>
    <string name="speed_skills"> 30</string>
    <string name="name_player">Roser</string>
    <string name="HP"> HP:</string>
    <string name="MP"> MP:</string>
    <string name="ATK"> ATK:</string>
    <string name="DEF"> DEF:</string>
    <string name="SP"> SP:</string>
    <string name="discovered_monsters">10</string>
    <string name="number_total_monsters">10</string>

</resources>