<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#0099cc"
tools:context="example.nightfall_of_the_final_conquer.app.home">

    <include layout="@layout/toolbar_menu" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:orientation="horizontal">

        <RelativeLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="1">

            <ImageView
                android:layout_width="190dp"
                android:layout_height="265dp"
                android:id="@+id/avatar"
                android:layout_gravity="left|top"
                android:padding="15dp"
                android:background="#000" />
        </RelativeLayout>

        <RelativeLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="1">

            <Button
                android:text="+"
                android:textSize="30sp"
                android:id="@+id/button"
                android:layout_gravity="right|top"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/tableLayout" />

            <TextView
                android:layout_width="168dp"
                android:layout_height="60dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name_player"
                android:textSize="40sp"
                android:textColor="#000"
                android:gravity="center"
                android:id="@+id/name_player"
                android:layout_gravity="right|top"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true" />


            <TableLayout
                android:layout_width="181dp"
                android:layout_height="155dp"
                android:layout_gravity="right|top"
                android:layout_marginTop="130dp"
                android:id="@+id/tableLayout">

                <TableRow>
                    <TextView
                        android:text="Stats"
                        android:layout_gravity="center"
                        android:layout_span="4"
                        android:textSize="30sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/HP"
                        android:textColor="#000"
                        android:layout_span="1"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/HP_value"
                        android:layout_span="1"
                        android:textSize="20sp"
                        android:text="000"
                        android:layout_marginRight="5sp"/>
                    <TextView
                        android:text="@string/MP"
                        android:textColor="#000"
                        android:layout_span="1"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/MP_value"
                        android:layout_span="1"
                        android:textSize="20sp"
                        android:text="000"
                        android:layout_marginRight="5sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/ATK"
                        android:textColor="#000"
                        android:layout_span="1"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/ATK_value"
                        android:layout_span="1"
                        android:textSize="20sp"
                        android:text="000"
                        android:layout_marginRight="5sp"/>
                    <TextView
                        android:text="@string/DEF"
                        android:textColor="#000"
                        android:layout_span="1"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/DEF_value"
                        android:layout_span="1"
                        android:textSize="20sp"
                        android:text="000"
                        android:layout_marginRight="5sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/SP"
                        android:textColor="#000"
                        android:layout_span="1"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/SP_value"
                        android:layout_span="1"
                        android:textSize="20sp"
                        android:text="000"
                        android:layout_marginRight="5sp"/>
                </TableRow>

            </TableLayout>
        </RelativeLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="382dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="88dp">

    </TableLayout>

</FrameLayout>

