<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="example.nightfall_of_the_final_conquer.app.home">


    <include
        layout="@layout/toolbar_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <LinearLayout
        android:keepScreenOn="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation = "vertical"
        android:id="@+id/table_skill_point"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:keepScreenOn="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "horizontal"
            android:id="@+id/skill_points_row"
            android:layout_gravity="center"
            android:layout_margin="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Skill points to use: "
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#fff"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/points_skills"
                android:id="@+id/points_to_use"
                android:gravity="center"
                android:layout_weight="2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#fff"
                android:textSize="25sp"/>

        </LinearLayout>

        <LinearLayout
            android:keepScreenOn="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "horizontal"
            android:id="@+id/hp_skill_point_row"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/HP"
                android:gravity="center"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#fff"
                android:textSize="25sp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hp_minus"
                android:text="-"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true"
                />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hp_skills"
                android:gravity="center"
                android:textColor="#fff"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hp_plus"
                android:text="+"
                android:layout_marginRight="20dp"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true" />


        </LinearLayout>

        <LinearLayout
            android:keepScreenOn="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "horizontal"
            android:id="@+id/mp_skill_point_row"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/MP"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="25sp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mp_minus"
                android:text="-"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true"
                />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mp_skills"
                android:gravity="center"
                android:textColor="#fff"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mp_plus"
                android:text="+"
                android:layout_marginRight="20dp"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true" />


        </LinearLayout>

        <LinearLayout
            android:keepScreenOn="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "horizontal"
            android:id="@+id/atk_skill_point_row"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ATK"
                android:gravity="center"
                android:textColor="#fff"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="25sp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/atk_minus"
                android:text="-"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true"
                />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/atk_skills"
                android:gravity="center"
                android:textColor="#fff"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/atk_plus"
                android:text="+"
                android:layout_marginRight="20dp"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true" />


        </LinearLayout>

        <LinearLayout
            android:keepScreenOn="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "horizontal"
            android:id="@+id/def_skill_point_row"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/DEF"
                android:gravity="center"
                android:textColor="#fff"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="25sp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/def_minus"
                android:text="-"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true"
                />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/def_skills"
                android:gravity="center"
                android:textColor="#fff"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/def_plus"
                android:text="+"
                android:layout_marginRight="20dp"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true" />


        </LinearLayout>

        <LinearLayout
            android:keepScreenOn="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation = "horizontal"
            android:id="@+id/sp_skill_point_row"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/SP"
                android:gravity="center"
                android:textColor="#fff"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="25sp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_minus"
                android:text="-"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true"
                />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/speed_skills"
                android:gravity="center"
                android:textColor="#fff"
                android:layout_weight="0.1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_plus"
                android:text="+"
                android:layout_marginRight="20dp"
                android:textSize="30sp"
                android:onClick=""
                android:background="#ffffab00"
                android:clickable="true" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>

