<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:id="@+id/fullscreen_content"
    tools:context="example.nightfall_of_the_final_conquer.app.home">


    <include
        layout="@layout/toolbar_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="190dp"
                android:layout_height="265dp"
                android:layout_gravity="left|top"
                android:background="#000"
                android:padding="15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_plus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right|top"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="130dp"
                android:text="+"
                android:textSize="30sp"
                android:background="#506" />

            <TextView
                android:id="@+id/name_player"
                android:layout_width="168dp"
                android:layout_height="60dp"
                android:layout_gravity="right|top"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="Roser"
                android:textColor="#000"
                android:textSize="40sp" />


            <TableLayout
                android:layout_width="181dp"
                android:layout_height="155dp"
                android:layout_gravity="right|top"
                android:layout_marginTop="130dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TableRow>

                    <TextView
                        android:layout_gravity="center"
                        android:layout_span="4"
                        android:text="Stats"
                        android:textSize="30sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_span="1"
                        android:text="@string/HP"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/HP_value"
                        android:layout_marginRight="5sp"
                        android:layout_span="1"
                        android:text="000"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_span="1"
                        android:text="@string/MP"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/MP_value"
                        android:layout_marginRight="5sp"
                        android:layout_span="1"
                        android:text="000"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_span="1"
                        android:text="@string/ATK"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/ATK_value"
                        android:layout_marginRight="5sp"
                        android:layout_span="1"
                        android:text="000"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_span="1"
                        android:text="@string/DEF"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/DEF_value"
                        android:layout_marginRight="5sp"
                        android:layout_span="1"
                        android:text="000"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_span="1"
                        android:text="@string/SP"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/SP_value"
                        android:layout_marginRight="5sp"
                        android:layout_span="1"
                        android:text="000"
                        android:textSize="20sp" />
                </TableRow>

            </TableLayout>
        </RelativeLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="382dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="88dp">

    </TableLayout>





</FrameLayout>
